--- a/app/app/src/main/res/drawable/circular_ripple_white_back.xml
+++ b/app/app/src/main/res/drawable/circular_ripple_white_back.xml
@@ -4,7 +4,7 @@
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/white_gray" />
         </shape>
     </item>
 </ripple>
