--- a/app/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/app/src/main/res/layout/fragment_setting_main.xml
@@ -5,13 +5,14 @@
 
     <data>
 
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layoutDirection="rtl"
-        tools:context=".main.profile.setting.fragments.ContactFragment">
+        android:background="@color/white"
+        android:layoutDirection="rtl">
 
         <LinearLayout
             android:id="@+id/toolbar"
@@ -31,17 +32,49 @@
                 android:padding="10dp"
                 android:src="@drawable/ic_arrow_forward_black_24dp" />
 
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="0.9"
                 android:gravity="end"
-                android:text="@string/contact_us"
+                android:text="@string/setting"
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:overScrollMode="never"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/light_gray"
+            app:layout_constraintBottom_toBottomOf="@+id/version"
+            app:layout_constraintTop_toTopOf="@+id/version" />
+
+        <TextView
+            android:id="@+id/version"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:paddingBottom="10dp"
+            android:text="@string/version"
+            android:textAppearance="@style/vazir_font"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
