--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="gray">#7B7B7B</color>
     <color name="light_gray">#CACACA</color>
     <color name="white">#FFF</color>
+    <color name="white_gray">#FAFAFA</color>
     <color name="dark_purple">#7c74b6</color>
     <color name="dark_pink">#d25a95</color>
     <color name="light_pink">#FAAAD2</color>
-    <color name="white_pink">#e7dfea</color>
     <color name="black">#272727</color>
 </resources>
