--- a/app/app/src/main/res/xml/network_security_config.xml
+++ b/app/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">www.mocky.io</domain>
         <domain includeSubdomains="true">darakhshan.ir</domain>
+        <domain includeSubdomains="true">google.com</domain>
     </domain-config>
 </network-security-config>
