updating edit profile

--- a/app/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/app/src/main/res/layout/fragment_edit_profile.xml
@@ -82,7 +82,8 @@
                         android:layout_height="140dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:src="@color/gray" />
+                        app:civ_border_color="@color/colorPrimaryDark"
+                        app:civ_border_width="3dp" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -446,6 +447,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
                     android:background="@drawable/login_btn"
+                    android:onClick="@{()->viewModel.updateInfo()}"
                     android:text="@string/edit"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white"
