adding uploading image

--- a/app/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/app/src/main/res/layout/fragment_edit_profile.xml
@@ -86,6 +86,7 @@
                         app:civ_border_width="3dp" />
 
                     <ImageView
+                        android:id="@+id/chooseImage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
