--- a/app/app/src/main/res/layout/fragment_signals.xml
+++ b/app/app/src/main/res/layout/fragment_signals.xml
@@ -11,7 +11,7 @@
         android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".main.profile.SignalsFragment">
+        tools:context=".main.profile.signals.SignalsFragment">
 
 
         <androidx.recyclerview.widget.RecyclerView
