--- a/app/app/src/main/res/layout/activity_signal_detail.xml
+++ b/app/app/src/main/res/layout/activity_signal_detail.xml
@@ -99,6 +99,7 @@
                     app:layout_constraintTop_toTopOf="@+id/profit" />
 
                 <TextView
+                    android:id="@+id/realTimeProfit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -345,6 +346,17 @@
                     </com.github.florent37.expansionpanel.ExpansionLayout>
 
                 </LinearLayout>
+
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/lineChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/login_card_view"
+                    android:elevation="5dp"
+                    app:layout_constraintTop_toBottomOf="@+id/description_holder" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
