--- a/app/app/src/main/res/layout/activity_signal_detail.xml
+++ b/app/app/src/main/res/layout/activity_signal_detail.xml
@@ -358,8 +358,10 @@
                         android:layout_margin="20dp"
                         android:background="@drawable/rectangular_card_view"
                         android:backgroundTint="@color/white"
+                        android:clipToPadding="false"
                         android:elevation="5dp"
                         android:orientation="horizontal"
+                        android:paddingBottom="10dp"
                         app:layout_constraintTop_toBottomOf="@+id/description_holder">
 
 
