--- a/app/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/app/src/main/res/layout/fragment_main_stock.xml
@@ -53,104 +53,109 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-        <HorizontalScrollView
+        <LinearLayout
+            android:id="@+id/top_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            android:scrollbarThumbHorizontal="@null"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:clipToPadding="false"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp"
             app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="0.3"
+                android:background="@drawable/main_icon_background"
+                android:clipToPadding="false"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="65dp"
+                    android:src="@drawable/ic_moshtaghe_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/stock_filter"
+                    android:textAppearance="@style/vazir_font"
+                    android:textSize="13sp" />
+            </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
+                android:layout_margin="5dp"
+                android:layout_weight="0.3"
+                android:background="@drawable/main_icon_background"
                 android:clipToPadding="false"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="15dp">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="65dp"
+                    android:src="@drawable/ic_ati_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="0.3"
-                    android:background="@drawable/main_icon_background"
-                    android:clipToPadding="false"
-                    android:elevation="5dp"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="15dp">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="65dp"
-                        android:src="@drawable/ic_moshtaghe_icon" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/stock_filter"
-                        android:textAppearance="@style/vazir_font"
-                        android:textSize="13sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="0.3"
-                    android:background="@drawable/main_icon_background"
-                    android:clipToPadding="false"
-                    android:elevation="5dp"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="15dp">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="65dp"
-                        android:src="@drawable/ic_ati_icon" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/calculator"
-                        android:textAppearance="@style/vazir_font"
-                        android:textSize="13sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="0.3"
-                    android:background="@drawable/main_icon_background"
-                    android:clipToPadding="false"
-                    android:elevation="5dp"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="15dp">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="65dp"
-                        android:src="@drawable/ic_ati_icon" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/watcher_message"
-                        android:textAppearance="@style/vazir_font"
-                        android:textSize="13sp" />
-                </LinearLayout>
-
+                    android:text="@string/calculator"
+                    android:textAppearance="@style/vazir_font"
+                    android:textSize="13sp" />
             </LinearLayout>
-        </HorizontalScrollView>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="0.3"
+                android:background="@drawable/main_icon_background"
+                android:clipToPadding="false"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="65dp"
+                    android:src="@drawable/ic_ati_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/watcher_message"
+                    android:textAppearance="@style/vazir_font"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:text="بهترین های تکنیکال"
+            android:textAppearance="@style/vazir_font"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top_menu" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
