--- a/app/app/src/main/res/layout/fragment_stock.xml
+++ b/app/app/src/main/res/layout/fragment_stock.xml
@@ -12,6 +12,7 @@
     </data>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layoutDirection="rtl"
@@ -72,6 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/rectangular_card_view"
+                android:elevation="5dp"
                 android:orientation="horizontal"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/volume">
@@ -220,6 +223,8 @@
                     android:layout_weight="0.16"
                     android:background="@color/dark_purple"
                     android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:text="@string/number"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white" />
@@ -230,6 +235,8 @@
                     android:layout_weight="0.16"
                     android:background="@color/dark_purple"
                     android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:text="@string/volume"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white" />
@@ -240,6 +247,8 @@
                     android:layout_weight="0.16"
                     android:background="@color/dark_purple"
                     android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:text="@string/buy"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white" />
@@ -250,7 +259,9 @@
                     android:layout_weight="0.16"
                     android:background="@color/dark_pink"
                     android:gravity="center"
-                    android:text="@string/number"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/sell"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white" />
 
@@ -260,6 +271,8 @@
                     android:layout_weight="0.16"
                     android:background="@color/dark_pink"
                     android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:text="@string/volume"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white" />
@@ -270,7 +283,9 @@
                     android:layout_weight="0.16"
                     android:background="@color/dark_pink"
                     android:gravity="center"
-                    android:text="@string/sell"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/number"
                     android:textAppearance="@style/vazir_font"
                     android:textColor="@color/white" />
 
@@ -278,12 +293,103 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/chartRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 app:layout_constraintTop_toBottomOf="@+id/chart_title" />
+
+            <LinearLayout
+                android:id="@+id/information_holder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:clipToPadding="false"
+                android:orientation="horizontal"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/chartRecyclerView">
+
+                <Button
+                    android:id="@+id/fundamental_analysing"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/rectangular_card_view"
+                    android:backgroundTint="@color/dark_pink"
+                    android:text="@string/fundamental_information"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/technical_analysing"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/rectangular_card_view"
+                    android:backgroundTint="@color/dark_purple"
+                    android:text="@string/technical_information"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/legal_person_chart_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/information_holder">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:background="@color/green"
+                    android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/real_personality"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:background="@color/blue"
+                    android:gravity="center"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/legal_personality"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/legalChartRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/legal_person_chart_title" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
