--- a/app/app/src/main/res/layout/stock_chart_sell_buy_item_model.xml
+++ b/app/app/src/main/res/layout/stock_chart_sell_buy_item_model.xml
@@ -1,76 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_marginTop="1dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="2dp"
+    android:clipToPadding="false"
     android:layoutDirection="rtl"
     android:orientation="horizontal">
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/buy_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.16"
-        android:background="@color/dark_purple"
+        android:background="@color/light_purple"
         android:gravity="center"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         android:textAppearance="@style/vazir_font"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/buy_volume"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
-        android:background="@color/dark_purple"
+        android:background="@color/light_purple"
         android:gravity="center"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         android:textAppearance="@style/vazir_font"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
     <TextView
-        android:textSize="12sp"
+        android:layout_marginEnd="2dp"
         android:id="@+id/buy_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.16"
-        android:background="@color/dark_purple"
+        android:background="@color/light_purple"
         android:gravity="center"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         android:textAppearance="@style/vazir_font"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/sell_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.16"
         android:background="@color/light_pink"
         android:gravity="center"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         android:textAppearance="@style/vazir_font"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/sell_volume"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
         android:background="@color/light_pink"
         android:gravity="center"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         android:textAppearance="@style/vazir_font"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/sell_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.16"
         android:background="@color/light_pink"
         android:gravity="center"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         android:textAppearance="@style/vazir_font"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
 </LinearLayout>
