--- a/app/app/src/main/res/layout/fragment_stock.xml
+++ b/app/app/src/main/res/layout/fragment_stock.xml
@@ -11,7 +11,7 @@
 
     </data>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -298,6 +298,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
+                android:overScrollMode="never"
                 app:layout_constraintTop_toBottomOf="@+id/chart_title" />
 
             <LinearLayout
@@ -387,11 +388,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
+                android:overScrollMode="never"
                 app:layout_constraintTop_toBottomOf="@+id/legal_person_chart_title" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </layout>
