changing profile page and adding gold-currency page

--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="dark_pink">#d25a95</color>
     <color name="light_pink">#FBCCE0</color>
     <color name="light_purple">#D0CAFB</color>
+    <color name="white_purple">#D0CAFB</color>
     <color name="black">#272727</color>
 
 
