--- a/app/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/app/src/main/res/layout/fragment_main_stock.xml
@@ -74,13 +74,12 @@
                     android:clipToPadding="false"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:padding="10dp"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="0.3"
                         android:background="@drawable/main_icon_background"
                         android:clipToPadding="false"
@@ -106,7 +105,7 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="0.3"
                         android:background="@drawable/main_icon_background"
                         android:clipToPadding="false"
@@ -132,7 +131,7 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="0.3"
                         android:background="@drawable/main_icon_background"
                         android:clipToPadding="false"
@@ -202,18 +201,8 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="20dp"
                     android:requiresFadingEdge="vertical"
-                    android:visibility="invisible"
                     app:layout_constraintTop_toBottomOf="@+id/best_technical_line" />
 
-
-                <ProgressBar
-                    android:id="@+id/technicalLoading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="@+id/bestTechnicalRecyclerView"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/bestTechnicalRecyclerView" />
 
                 <Button
                     android:id="@+id/more_technical"
@@ -276,18 +265,6 @@
                     android:requiresFadingEdge="vertical"
                     app:layout_constraintTop_toBottomOf="@+id/best_fundamental_line" />
 
-
-                <ProgressBar
-                    android:id="@+id/fundamentalLoading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="@+id/bestFundamentalRecyclerView"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/bestFundamentalRecyclerView" />
-
-
-
                 <Button
                     android:id="@+id/more_fundamental"
                     android:layout_width="match_parent"
@@ -306,5 +283,21 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
+
+        <LinearLayout
+            android:id="@+id/loading"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
