--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:layoutDirection="rtl"
         app:layoutDescription="@xml/profile_motion"
-        tools:context=".main.profile.ProfileFragment">
+        tools:context=".main.profile.OldProfileFragment">
 
 
         <RelativeLayout
@@ -52,7 +52,6 @@
             android:text="@{viewModel.name}"
             android:textAppearance="@style/vazir_font" />
 
-
         <TextView
             android:id="@+id/expire"
             android:layout_width="wrap_content"
@@ -69,146 +68,27 @@
             android:scaleType="fitXY"
             android:src="@mipmap/profile_top_banner" />
 
-
-        <LinearLayout
-            android:id="@+id/infoHolder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rectangular_card_view"
-            android:elevation="10dp"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/profileBanner">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:gravity="center"
-                    android:text="@string/following"
-                    android:textAppearance="@style/vazir_font" />
-
-
-                <TextView
-                    android:id="@+id/follower"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@{viewModel.followers}"
-                    android:textAppearance="@style/vazir_font"
-                    android:textColor="@color/gray"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:gravity="center"
-                    android:text="@string/followers"
-                    android:textAppearance="@style/vazir_font" />
-
-
-                <TextView
-                    android:id="@+id/following"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@{viewModel.following}"
-                    android:textAppearance="@style/vazir_font"
-                    android:textColor="@color/gray"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:gravity="center"
-                    android:text="@string/signals"
-                    android:textAppearance="@style/vazir_font" />
-
-
-                <TextView
-                    android:id="@+id/signals"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@{viewModel.signals}"
-                    android:textAppearance="@style/vazir_font"
-                    android:textColor="@color/gray"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:elevation="10dp"
-            android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/infoHolder">
+            app:layout_constraintTop_toBottomOf="@+id/profileBanner">
 
-            <LinearLayout
+            <fragment
+                android:id="@+id/myNavHostFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/light_gray" />
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/navigation"
+                tools:context=".main.profile.setting.SettingActivity" />
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:elevation="5dp"
-                app:tabMode="fixed"
-                app:tabSelectedTextColor="@color/black"
-                app:tabTextAppearance="@style/vazir_font"
-                app:tabTextColor="@color/gray" />
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
 
         </LinearLayout>
 
-
-        <ImageView
-            android:id="@+id/menu"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/circular_ripple_white_back"
-            android:paddingStart="10dp"
-            android:paddingTop="15dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="15dp"
-            android:src="@drawable/ic_profile_menu"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
