--- a/app/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/app/src/main/res/layout/fragment_setting_main.xml
@@ -14,6 +14,7 @@
         android:background="@color/white"
         android:layoutDirection="rtl">
 
+
         <LinearLayout
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -24,6 +25,7 @@
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent">
 
+            <!--
             <ImageView
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
@@ -31,19 +33,20 @@
                 android:background="@drawable/circular_ripple_pink_back"
                 android:padding="10dp"
                 android:src="@drawable/ic_arrow_forward_black_24dp" />
-
+                -->
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="0.9"
-                android:gravity="end"
+                android:gravity="center"
                 android:text="@string/setting"
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </LinearLayout>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -53,28 +56,29 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+        <!--
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="2dp"
+                   android:background="@color/light_gray"
+                   app:layout_constraintBottom_toBottomOf="@+id/version"
+                   app:layout_constraintTop_toTopOf="@+id/version" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/light_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/version"
-            app:layout_constraintTop_toTopOf="@+id/version" />
 
-        <TextView
-            android:id="@+id/version"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:paddingBottom="10dp"
-            android:text="@string/version"
-            android:textAppearance="@style/vazir_font"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
+               <TextView
+                   android:id="@+id/version"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:background="@color/white"
+                   android:paddingStart="15dp"
+                   android:paddingEnd="15dp"
+                   android:paddingBottom="10dp"
+                   android:text="@string/version"
+                   android:textAppearance="@style/vazir_font"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintLeft_toLeftOf="parent"
+                   app:layout_constraintRight_toRightOf="parent" />
+       -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
