--- a/app/app/src/main/res/xml/profile_motion.xml
+++ b/app/app/src/main/res/xml/profile_motion.xml
@@ -47,7 +47,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/infoHolder" />
+            app:layout_constraintTop_toBottomOf="@+id/profileBanner" />
 
 
         <Constraint
@@ -96,9 +96,9 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatarHolder" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <Constraint
